--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -25,7 +25,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="background-color:white;height:100px">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" style="color:black" href="/"><img alt="logo" style="width:90px;height:100px" src="{% static 'store/assets/img/logo.png' %}" id="test"/>Bien-être IA</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <a class="navbar-brand js-scroll-trigger" style="color:black" href="/"><img alt="logo" style="width:90px;height:100px" src="{% static 'store/assets/img/logo.png' %}" id="test"/>Bien manger</a><button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
                         <li class="nav-item">
