--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -10,7 +10,7 @@
         {% load static %}
 
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'store/assets/img/favicon.png' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'store/assets/img/logo.png' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
